--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>AL4_CC1</artifactId>
+    <artifactId>TradeMe</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
